fixed navbar and footer
- removed content overlapping with navbar and footer (added padding to global.css)

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,3 @@
-
 footer {
     /* FOOTER TO BOTTOM */
     position: fixed;
@@ -14,9 +13,33 @@ footer {
     padding: 0 50px 0 100px;
     flex-wrap: wrap;
     border-top: 3px solid var(--black);
+    background-color: var(--wheat);
+    z-index: 999;
+}
+
+.footer {
+    height: 80px;
 }
   
 footer .footer {
     font-size: 35px;
     font-weight: 600;
+}
+
+
+@media (max-width: 1024px) {
+    footer {
+        padding: 20px 20px 0 100px;
+    }
+
+    .footer p {
+        font-size: 24px;
+    }
+}
+  
+  
+@media (max-width: 768px) {
+    .footer p {
+        font-size: 24px;
+    }
 }
