--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,4 +1,14 @@
+.sticky {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+}
+
 nav {
+    background-color: var(--wheat);
+    overflow: hidden;
     display: flex;
     height: 80px;
     width: 100%;
@@ -27,7 +37,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     padding: 8px 15px;
     border-radius: 5px;
     letter-spacing: 1px;
@@ -39,19 +49,22 @@ nav .menu-btn i {
     cursor: pointer;
     display: none;
 }
-  
+   
 input[type="checkbox"] {
     display: none;
 }
 
 @media (max-width: 1024px) {
-    nav{
-      padding: 0 40px 0 50px;
+  nav {
+      padding: 0 20px 0 20px;
     }
 }
   
 @media (max-width: 768px) {
-    nav .menu-btn i{
+  .logo p {
+    font-size: 24px;
+  }
+  nav .menu-btn i{
       display: block;
     }
     #click:checked ~ .menu-btn i:before {
